force-app/main/default/objects/Opportunity_Credit_Line__c/Opportunity_Credit_Line__c.object-meta.xml
<CustomObject>
    <label>Opportunity Credit Line</label>
    <nameField>
        <displayFormat>OCL-{000000}</displayFormat>
        <label>Opportunity Credit Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Credit Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>