force-app/main/default/objects/Opportunity_Credit_Line__c/fields/Credit_Line_Status__c.field-meta.xml
<CustomField>
    <fullName>Credit_Line_Status__c</fullName>
    <label>Credit Line Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
                <default>true</default>
                <label>Requested</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>