force-app/main/default/objects/Opportunity_Credit_Line__c/fields/Credit_Notes__c.field-meta.xml
<CustomField>
    <fullName>Credit_Notes__c</fullName>
    <label>Credit Notes</label>
    <type>TextArea</type>
</CustomField>