force-app/main/default/objects/Opportunity_Credit_Line__c/fields/Opportunity_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Credit_Limit__c</fullName>
    <label>Opportunity Credit Limit</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>