force-app/main/default/objects/Opportunity_Credit_Line__c/fields/Sub_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Sub_Account_Number__c</fullName>
    <label>Sub Account Number</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>