force-app/main/default/objects/Opportunity_Credit_Line__c/validationRules/Opportunity_Credit_Amount_Verification.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Credit_Amount_Verification</fullName>
    <active>true</active>
    <errorConditionFormula>Opportunity__r.Amount &gt;  Opportunity_Credit_Limit__c</errorConditionFormula>
    <errorMessage>The amount of the Opportunity exceeds the Opportunity Credit Limit. Please contact the Credit Department before proceeding.</errorMessage>
</ValidationRule>